--- a/installers/release-notes/pcgen-release-notes-5154.html
+++ b/installers/release-notes/pcgen-release-notes-5154.html
@@ -179,6 +179,7 @@ Please give it a shot and let us know how it works for you.
 <li>[ <a href="http://sourceforge.net/support/tracker.php?aid=2100044">2100044</a> ]	New JEP function - isgamemode()</li>
 <li>[ <a href="http://sourceforge.net/support/tracker.php?aid=2102789">2102789</a> ]	Update - BONUSSTATLEVELSTARTINTERVAL</li>
 <li>[ <a href="http://sourceforge.net/support/tracker.php?aid=2146435">2146435</a> ]	Deprecate PRExxx:x,y,y=z for PRExxx:x,y=z,y=z</li>
+<li>[ <a href="http://sourceforge.net/support/tracker.php?aid=2147007">2147007</a> ]	Document new Language Assignment tags for Kits</li>
 </ul>
 
 <h3>Code Bugs</h3>
@@ -197,6 +198,7 @@ Please give it a shot and let us know how it works for you.
 <li>[ <a href="http://sourceforge.net/support/tracker.php?aid=2146710">2146710</a> ]	5.15.0 SubstitutionClass may fail with reference based token</li>
 <li>[ <a href="http://sourceforge.net/support/tracker.php?aid=2147169">2147169</a> ]	Ability Objects are not properly resolved</li>
 <li>[ <a href="http://sourceforge.net/support/tracker.php?aid=2147171">2147171</a> ]	Feats &amp; Abilities Tab listing incomplete</li>
+<li>[ <a href="http://sourceforge.net/support/tracker.php?aid=2147903">2147903</a> ]	VAR using CL in SUBSTITUTION CLASS getting tripled</li>
 </ul>
 
 <h3>Data Bugs</h3>
@@ -210,7 +212,9 @@ Please give it a shot and let us know how it works for you.
 <h3>Documentation Bugs</h3>
 
 <ul>
+<li>[ <a href="http://sourceforge.net/support/tracker.php?aid=2024449">2024449</a> ]	Improve SPELLTYPE docs with ANY example in CHOOSE:SPELLS doc</li>
 <li>[ <a href="http://sourceforge.net/support/tracker.php?aid=2101286">2101286</a> ]	Clarify TEMPLATE:CHOOSE docs wrt TEMPLATE:ADDCHOICE</li>
+<li>[ <a href="http://sourceforge.net/support/tracker.php?aid=2118658">2118658</a> ]	KNOWNSPELLS is not Class Level</li>
 <li>[ <a href="http://sourceforge.net/support/tracker.php?aid=2127707">2127707</a> ]	Wildcard (%) usage in ADD:FEAT</li>
 <li>[ <a href="http://sourceforge.net/support/tracker.php?aid=2136833">2136833</a> ]	ABILITY tag accepts &#039;TYPE=&#039;</li>
 <li>[ <a href="http://sourceforge.net/support/tracker.php?aid=2137446">2137446</a> ]	FAQ &quot;I Want to Help. . . &quot; Page Sources and Publishers</li>
