--- a/installers/release-notes/pcgen-release-notes-5155.html
+++ b/installers/release-notes/pcgen-release-notes-5155.html
@@ -40,8 +40,14 @@ Please give it a shot and let us know how it works for you.
 
 		<h2><a name="Chars">Character Changes</a></h2>
 
-		<p>Characters from the 5.14 series of PCGen should load seamlessly in 5.15.5.
-		</p>
+		<p>Most Characters from the 5.14 series of PCGen should load seamlessly in 5.15.5. 
+		  Characters created in the Modern gameMode will be effected by changes made to 
+		  the Occupations feature. Due to refinements to the Ability Object we 
+		  have reconfigured the Occupations feature. Newly created characters will see 
+		  no differences but when existing characters are opened PCGen will report that 
+		  the Occupation Ability and the associated skill abilities cannot be found. The 
+		  fix is simple however, simply note what abilities are missing and go to the 
+		  Background tab and reselect your choices.</p>
 		
 		<h2><a name="GMGenIssue">GMGen Known Issue</a></h2>
 
