--- a/installers/release-notes/pcgen-release-notes-5155.html
+++ b/installers/release-notes/pcgen-release-notes-5155.html
@@ -165,8 +165,10 @@ Please give it a shot and let us know how it works for you.
 <ul>
 <li>[ <a href="http://sourceforge.net/support/tracker.php?aid=1986797">1986797</a> ]	Remove PRESPELLSCHOOL tag docs</li>
 <li>[ <a href="http://sourceforge.net/support/tracker.php?aid=1986798">1986798</a> ]	Remove PRESPELLSCHOOLSUB tag docs</li>
+<li>[ <a href="http://sourceforge.net/support/tracker.php?aid=2024458">2024458</a> ]	Need section on Kits and what they're used for</li>
 <li>[ <a href="http://sourceforge.net/support/tracker.php?aid=2055533">2055533</a> ]	[OS] Document new params for ABILITY based OS tags</li>
 <li>[ <a href="http://sourceforge.net/support/tracker.php?aid=2067854">2067854</a> ]	[OS] Add SKILL.%.ACPfoo,bar,baz,bot to OS Docs</li>
+<li>[ <a href="http://sourceforge.net/support/tracker.php?aid=2158457">2158270</a> ]	Default Monster Mode doesn't exist</li>
 <li>[ <a href="http://sourceforge.net/support/tracker.php?aid=2158457">2158457</a> ]	Update &quot;Monster Menu Options&quot; screenshot</li>
 </ul>
 
